@@ -27,6 +27,9 @@ Append branch (unreleased changes)
 
     HDFS-604. Block report processing for append. (shv)
 
+    HDFS-619. Support replica recovery initialization in datanode for the new
+    append design.  (szetszwo)
+
   IMPROVEMENTS
 
     HDFS-509. Redesign DataNode volumeMap to include all types of Replicas.
